Merge dev to master (#230)
* Feat: 멀티 인스턴스 환경을 위한 Redis 기반 캐시/스케줄러 전환 (#201)

* [#200] Chore: Redis, ShedLock, Testcontainers 의존성 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* [#200] Feat: RedisConfig Bean 등록 및 CacheConfig Caffeine → Redis 교체

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* [#200] Test: 캐시 테스트 Testcontainers Redis 기반으로 수정

Singleton Container 패턴 적용으로 Spring 컨텍스트 캐싱과 충돌 방지

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* [#200] Feat: ShedLock으로 분산 스케줄러 중복 실행 방지

다중 인스턴스 환경에서 스케줄러가 동시에 실행되는 것을 방지하기 위해
ShedLock을 적용하고 Redis를 LockProvider로 설정

- ShedLockConfig: Redis 기반 LockProvider 빈 등록, @ConditionalOnMissingBean으로 테스트 오버라이드 허용
- FoodStatusScheduler / DeviceCleanupScheduler: @SchedulerLock 적용 (lockAtMostFor=PT5M)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* [#200] Test: 캐시 테스트 전용 Redis 컨테이너 분리

캐시 테스트 2개만 Docker를 필요로 하도록 Redis 의존성을 분리

- RedisConfig: @ConditionalOnProperty(spring.cache.type=redis) 추가로 테스트 프로파일에서 비활성화
- IntegrationTestSupport: Redis 컨테이너 제거, NoOpShedLockConfig 추가
- RedisIntegrationTestSupport: 캐시 테스트 전용 Redis 컨테이너 싱글톤으로 분리
- CategoryCacheIntegrationTest / RefrigeratorCacheIntegrationTest: RedisIntegrationTestSupport 상속으로 변경

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* [#CD] Fix: git clean 시 root 권한 디렉터리 제외 옵션 추가

docker 볼륨 마운트 디렉터리(mysql_data, certbot)와 잔재 디렉터리(mysql),
로그 디렉터리(logs)가 root 권한으로 생성되어 git clean 시 Permission Denied
경고가 발생하던 문제를 수정.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

---------

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>

* [#CD] Fix: orphan 컨테이너 충돌 방지 및 nginx 재생성 방식 통일

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Refactor: 레이트 리미터 Nginx로 이관 (#204)

* [#203] Chore: Nginx 엔드포인트별 rate limit zone 추가

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* [#203] Refactor: Java 레이트 리미터 코드 제거

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* [#203] Chore: application.yml resilience