@@ -3,10 +3,13 @@ package soon.fridgely.domain.refrigerator.service;
 import io.github.resilience4j.retry.annotation.Retry;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import soon.fridgely.domain.category.service.CategoryRemover;
-import soon.fridgely.domain.food.service.FoodRemover;
+import soon.fridgely.domain.EntityStatus;
+import soon.fridgely.domain.member.entity.Member;
+import soon.fridgely.domain.member.repository.MemberRepository;
 import soon.fridgely.domain.refrigerator.dto.command.MemberRefrigeratorKey;
 import soon.fridgely.domain.refrigerator.dto.request.RefrigeratorUpdateRequest;
 import soon.fridgely.domain.refrigerator.dto.response.InvitationCodeResponse;
@@ -16,105 +19,146 @@ import soon.fridgely.domain.refrigerator.entity.InvitationCode;
 import soon.fridgely.domain.refrigerator.entity.MemberRefrigerator;
 import soon.fridgely.domain.refrigerator.entity.Refrigerator;
 import soon.fridgely.domain.refrigerator.entity.RefrigeratorRole;
+import soon.fridgely.domain.refrigerator.repository.MemberRefrigeratorRepository;
+import soon.fridgely.domain.refrigerator.repository.RefrigeratorRepository;
 import soon.fridgely.global.security.annotation.ValidateRefrigeratorAccess;
 import soon.fridgely.global.support.exception.CoreException;
 import soon.fridgely.global.support.exception.ErrorType;
 
 import java.time.LocalDateTime;
+
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
 @Service
 public class RefrigeratorService {
 
-    private final RefrigeratorManager refrigeratorManager;
-    private final MemberRefrigeratorLinker memberRefrigeratorLinker;
-    private final MemberRefrigeratorFinder memberRefrigeratorFinder;
+    private final RefrigeratorRepository refrigeratorRepository;
+    private final MemberRefrigeratorRepository memberRefrigeratorRepository;
+    private final MemberRepository memberRepository;
     private final InvitationCodeGenerator codeGenerator;
-    private final FoodRemover foodRemover;
-    private final CategoryRemover categoryRemover;
 
     @ValidateRefrigeratorAccess(key = "#key")
+    @CacheEvict(value = "myRefrigerators", allEntries = true)
+    @Transactional
     public void updateRefrigeratorName(MemberRefrigeratorKey key, RefrigeratorUpdateRequest request) {
-        refrigeratorManager.update(key.refrigeratorId(), request.newName());
+        Refrigerator refrigerator = refrigeratorRepository.findByIdAndStatus(key.refrigeratorId(), EntityStatus.ACTIVE)
+            .orElseThrow(() -> new CoreException(ErrorType.NOT_FOUND_DATA));
+        refrigerator.update(request.newName());
     }
 
     @ValidateRefrigeratorAccess(key = "#key")
     @Retry(name = "invitationCodeGeneration", fallbackMethod = "generateInvitationCodeFallback")
+    @Transactional
     public InvitationCodeResponse generateInvitationCode(MemberRefrigeratorKey key) {
         String newCode = codeGenerator.generateUnique();
         LocalDateTime now = LocalDateTime.now();
-
-        InvitationCode savedCode = refrigeratorManager.refreshInvitationCode(key.refrigeratorId(), newCode, now);
-        return new InvitationCodeResponse(savedCode.getCode(), savedCode.getExpirationAt());
+        Refrigerator refrigerator = refrigeratorRepository.findByIdAndStatus(key.refrigeratorId(), EntityStatus.ACTIVE)
+            .orElseThrow(() -> new CoreException(ErrorType.NOT_FOUND_DATA));
+        InvitationCode invitationCode = InvitationCode.generate(newCode, now);
+        refrigerator.refreshInvitationCode(invitationCode);
+        return new InvitationCodeResponse(invitationCode.getCode(), invitationCode.getExpirationAt());
     }
 
+    @CacheEvict(value = "myRefrigerators", key = "#memberId")
     @Transactional
     public void joinByInvitationCode(Long memberId, String code) {
-        Refrigerator refrigerator = refrigeratorManager.findByInvitationCode(code);
+        Refrigerator refrigerator = refrigeratorRepository.findByInvitationCode_code(code)
+            .filter(r -> r.getStatus() == EntityStatus.ACTIVE)
+            .orElseThrow(() -> new CoreException(ErrorType.INVALID_INVITATION_CODE));
         refrigerator.validateInvitationCode(code, LocalDateTime.now());
 
-        memberRefrigeratorLinker.linkMemberToRefrigerator(
-            new MemberRefrigeratorKey(memberId, refrigerator.getId()),
-            RefrigeratorRole.MEMBER
-        );
+        if (memberRefrigeratorRepository.existsByRefrigeratorIdAndMemberIdAndStatus(
+            refrigerator.getId(), memberId, EntityStatus.ACTIVE)) {
+            throw new CoreException(ErrorType.ALREADY_JOINED_REFRIGERATOR);
+        }
+        Member member = memberRepository.findById(memberId)
+            .orElseThrow(() -> new CoreException(ErrorType.NOT_FOUND_DATA));
+        memberRefrigeratorRepository.save(MemberRefrigerator.link(member, refrigerator, RefrigeratorRole.MEMBER));
     }
 
+    @Cacheable(value = "myRefrigerators", key = "#memberId")
     @Transactional(readOnly = true)
     public List<RefrigeratorResponse> findAllMyRefrigerators(Long memberId) {
-        return memberRefrigeratorFinder.findAllByMemberId(memberId)
-            .refrigerators()
+        return memberRefrigeratorRepository.findAllMyRefrigerators(memberId, EntityStatus.ACTIVE)
             .stream()
             .map(RefrigeratorResponse::from)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     @ValidateRefrigeratorAccess(key = "#key")
     @Transactional(readOnly = true)
     public RefrigeratorResponse findRefrigerator(MemberRefrigeratorKey key) {
-        MemberRefrigerator memberRefrigerator = memberRefrigeratorFinder.findByMemberIdAndRefrigeratorId(key.memberId(), key.refrigeratorId());
+        MemberRefrigerator memberRefrigerator = memberRefrigeratorRepository
+            .findByMemberIdAndRefrigeratorId(key.memberId(), key.refrigeratorId(), EntityStatus.ACTIVE)
+            .orElseThrow(() -> new CoreException(ErrorType.NOT_FOUND_DATA));
         return RefrigeratorResponse.from(memberRefrigerator);
     }
 
+    @CacheEvict(value = "myRefrigerators", key = "#key.memberId()")
     @Transactional
     public void leaveRefrigerator(MemberRefrigeratorKey key) {
-        Optional<MemberRefrigerator> memberRefrigerator = memberRefrigeratorFinder.findOptionalByMemberIdAndRefrigeratorId(key.memberId(), key.refrigeratorId());
+        Optional<MemberRefrigerator> memberRefrigerator = memberRefrigeratorRepository
+            .findByMemberIdAndRefrigeratorId(key.memberId(), key.refrigeratorId(), EntityStatus.ACTIVE);
         if (memberRefrigerator.isEmpty()) {
             return;
         }
-        if (memberRefrigerator.get().isOwner()) { // TODO: 냉장고 삭제 기능 구현 후 MEMBER가 존재하지 않는다면 냉장고도 삭제하도록 변경
+        if (memberRefrigerator.get().isOwner()) {
             throw new CoreException(ErrorType.OWNER_CANNOT_LEAVE_REFRIGERATOR);
         }
-        memberRefrigeratorLinker.unlink(key);
-    }
-
-    @ValidateRefrigeratorAccess(key = "#key")
-    @Transactional
-    public void deleteRefrigerator(MemberRefrigeratorKey key) {
-        MemberRefrigerator memberRefrigerator = memberRefrigeratorFinder.findByMemberIdAndRefrigeratorId(key.memberId(), key.refrigeratorId());
-        if (!memberRefrigerator.isOwner()) {
-            throw new CoreException(ErrorType.ONLY_OWNER_CAN_DELETE_REFRIGERATOR);
-        }
-        foodRemover.removeAllByRefrigeratorId(key.refrigeratorId());
-        categoryRemover.removeAllByRefrigeratorId(key.refrigeratorId());
-        memberRefrigeratorLinker.unlinkAll(key.refrigeratorId());
-        refrigeratorManager.delete(key.refrigeratorId());
+        memberRefrigerator.get().delete();
     }
 
     @ValidateRefrigeratorAccess(key = "#key")
     @Transactional(readOnly = true)
     public List<RefrigeratorMemberResponse> findAllMembers(MemberRefrigeratorKey key) {
-        return memberRefrigeratorFinder.findAllMembersByRefrigeratorId(key.refrigeratorId())
+        return memberRefrigeratorRepository.findAllByRefrigeratorId(key.refrigeratorId(), EntityStatus.ACTIVE)
             .stream()
             .map(RefrigeratorMemberResponse::from)
             .toList();
     }
 
-    private InvitationCodeResponse generateInvitationCodeFallback(MemberRefrigeratorKey key, Exception e) {
+    @Transactional
+    public Refrigerator register(Member member) {
+        Refrigerator refrigerator = Refrigerator.register(member.getNickname());
+        return refrigeratorRepository.saveAndFlush(refrigerator);
+    }
+
+    @CacheEvict(value = "myRefrigerators", key = "#member.id")
+    @Transactional
+    public void linkToOwner(Member member, Refrigerator refrigerator) {
+        memberRefrigeratorRepository.save(MemberRefrigerator.link(member, refrigerator, RefrigeratorRole.OWNER));
+    }
+
+    @Transactional(readOnly = true)
+    public MemberRefrigerator findMemberRefrigerator(long memberId, long refrigeratorId) {
+        return memberRefrigeratorRepository.findByMemberIdAndRefrigeratorId(memberId, refrigeratorId, EntityStatus.ACTIVE)
+            .orElseThrow(() -> new CoreException(ErrorType.NOT_FOUND_DATA));
+    }
+
+    @CacheEvict(value = "myRefrigerators", allEntries = true)
+    @Transactional
+    public void unlinkAll(long refrigeratorId) {
+        List<MemberRefrigerator> links = memberRefrigeratorRepository.findAllByRefrigeratorId(refrigeratorId, EntityStatus.ACTIVE);
+        links.forEach(MemberRefrigerator::delete);
+    }
+
+    @CacheEvict(value = "myRefrigerators", allEntries = true)
+    @Transactional
+    public void delete(long refrigeratorId) {
+        Refrigerator refrigerator = refrigeratorRepository.findById(refrigeratorId)
+            .orElseThrow(() -> new CoreException(ErrorType.NOT_FOUND_DATA));
+        if (refrigerator.isDeleted()) {
+            return;
+        }
+        refrigerator.delete();
+    }
+
+    InvitationCodeResponse generateInvitationCodeFallback(MemberRefrigeratorKey key, Exception e) {
         log.warn("초대 코드 생성 재시도 횟수 초과 - refrigeratorId: {}", key.refrigeratorId(), e);
         throw new CoreException(ErrorType.CONCURRENT_UPDATE_LIMIT_EXCEEDED);
     }
-
 }
